@@ -18,6 +18,29 @@
 
 EDELIB_NAMESPACE {
 
+/**
+ * \class MimeType
+ * \brief Mime handling class
+ *
+ * MimeType will handle file types according to specification
+ * at http://www.freedesktop.org. This class depends on
+ * <em>shared-mime-info</em> package, usually shipped with todays
+ * distributions.
+ *
+ * It will try to recognize given file looking into $XDG_DATA_DIRS/mime/magic
+ * database, consulting $XDG_DATA_DIRS/mime/aliases for potential type
+ * aliasing.
+ *
+ * Returned values from type() will be in form context/file-type, so for
+ * example, for given file foo.tar.gz will be <em>application/x-compressed-tar</em>
+ * or for baz.jpg will be <em>image/jpeg</em>.
+ *
+ * If file could not be recognized, returned string will be: <em>application/octet-stream</em>.
+ *
+ * comment() will return full description for recognized file, looking inside
+ * $XDG_DATA_DIRS/mime/context/file-type.xml file. This description can be
+ * plain english (default) or localized (not implemented yet).
+ */
 class MimeType
 {
 	private:
@@ -28,12 +51,44 @@ class MimeType
 		MimeType& operator=(const MimeType&);
 
 	public:
+		/** Empty constructor */
 		MimeType();
+		/** Cleans internal data */
 		~MimeType();
 
+		/**
+		 * Set path to the file for inspection. If file does not
+		 * exists or is unreadable, it will return false.
+		 *
+		 * \return true if manage to access file, otherwise false
+		 * \param filename is full path to file
+		 */
 		bool set(const char* filename);
+
+		/** 
+		 * Return context/file-type form for file, given with set().
+		 * If set() failed, it will return empty string.
+		 */
 		String type(void);
+
+		/**
+		 * Lookup for description described at the beggining of this document.
+		 * If file with description does not exists, it will return empty string.
+		 */
 		String comment(void);
+
+		/**
+		 * Return the name of potential icon, using name according to freedesktop.org
+		 * icon name specification. It will <b>not</b> return file with extension
+		 * since further those could be explicitely choosed, <b>nor</b> will return
+		 * full path for icons or check if file exists.
+		 *
+		 * Icon name will be in form: if mime type is image/jpeg, icon will be image-jpeg;
+		 * the same will be for eg. application/x-tek-pk, icon name will be application-x-tek-pk.
+		 *
+		 * If set() failed, it will return empty string.
+		 */
+		String icon_name(void);
 }; 
 
 }
